Fixed wrong color for hovered menu items

--- a/javafx/src/main/resources/css/application.css
+++ b/javafx/src/main/resources/css/application.css
@@ -509,6 +509,10 @@ SwitchPane .boxButtons {
     -fx-text-fill: sandybrown;
 }
 
+.menu-item:hover .fakeIcon {
+    -fx-text-fill: -fx-focus-color;
+}
+
 .fakeIcon {
     -fx-text-fill: -fx-control-pane-accent;
 }
